--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,7 +1,38 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}My Blog{% endblock %}
 
+{% block css_files %}
+    <link rel="stylesheet" href="{% static "blog/post.css" %}" />
+    <link rel="stylesheet" href="{% static "blog/index.css" %}" />
+{% endblock %}
+
 {% block content %}
-    <h1>Welcome to my blog</h1>
+    <section id="welcome">
+        <header>
+            <img src="{% static "blog/images/kris.png" %}" alt="Kris - The Author Of This Blog" />
+            <h2>KRISTOF'S BLOG</h2>
+        </header>
+
+        <p>Hi, I am Kris and I love to blog about tech and the world!</p>
+    </section>
+
+    <section id="latest-posts">
+        <h2>My Latest Posts</h2>
+
+        <ul>
+            {% include "blog/includes/post.html" %}
+        </ul>
+    </section>
+
+    <section id="about">
+        <h2>What I Do</h2>
+        <p>
+            I love programming, I love to help others and I enjoy exploring new technologies in general!
+        </p>
+        <p>
+            My goal is to keep on growing as a developer - and if I could help you do the same, I'd be very happy!
+        </p>
+    </section>
 {% endblock %}
