--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}This Post Title{% endblock %}
+{% block title %}
+    {{ post.title }}
+{% endblock %}
 
 {% block css_files %}
     <link rel="stylesheet" href="{% static "blog/post-detail.css" %}" />
@@ -9,25 +11,17 @@
 
 {% block content %}
     <section id="summary">
-        <h2>Post Title</h2>
+        <h2>{{ post.title }}</h2>
         <article>
-            <img src="{% static "blog/images/mountains.jpg" %}" alt="Post Title" />
-            <address>By Kristofer</address>
+            <img src="{% static "blog/images/"|add:post.image %}" alt="{{ post.title }}" />
+            <address>By {{ post.author|title }}</address>
             <div>
-                Last updated on <time>July 10th</time>
+                Last updated on <time>{{ post.date|date:"d M Y" }}</time>
             </div>
         </article>
     </section>
 
     <main>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id odio inventore placeat saepe, consectetur asperiores consequatur obcaecati quos culpa error magni modi reprehenderit minus dolorum nihil quasi exercitationem! Tempora, totam.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id odio inventore placeat saepe, consectetur asperiores consequatur obcaecati quos culpa error magni modi reprehenderit minus dolorum nihil quasi exercitationem! Tempora, totam.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id odio inventore placeat saepe, consectetur asperiores consequatur obcaecati quos culpa error magni modi reprehenderit minus dolorum nihil quasi exercitationem! Tempora, totam.
-        </p>
+        {{ post.content|linebreaks }}
     </main>
 {% endblock %}
